--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 - go get -u github.com/go-openapi/errors
 - go get -u github.com/go-openapi/loads
 - go get -u github.com/go-openapi/strfmt
-- go get -u github.com/go-openapi/validate
+- go get -u github.com/baishancloud/go-openapi-validate
 - go get -u github.com/docker/go-units
 language: go
 notifications:
